--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "rimraf lib && babel src --out-dir lib",
-    "test": "mocha test/*.spec.js --compilers js:babel-core/register"
+    "test": "mocha test/*.spec.js --compilers js:babel-core/register",
+    "report": "cross-env NODE_ENV=test nyc --reporter=html mocha test/*.spec.js"
   },
   "repository": {
     "type": "git",
@@ -25,11 +26,15 @@
   "devDependencies": {
     "babel-cli": "^6.24.1",
     "babel-loader": "^7.1.1",
+    "babel-plugin-istanbul": "^4.1.4",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "babel-register": "^6.24.1",
     "chai": "^4.1.0",
     "chai-spies": "git://github.com/chaijs/chai-spies.git#master",
+    "coveralls": "^2.13.1",
+    "cross-env": "^5.0.1",
     "eslint": "^4.2.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-plugin-standard": "^3.0.1",
@@ -37,6 +42,7 @@
     "jsdom": "^11.1.0",
     "mocha": "^3.4.2",
     "mocha-jsdom": "^1.1.0",
+    "nyc": "^11.0.3",
     "rimraf": "^2.6.1"
   },
   "dependencies": {
@@ -45,5 +51,12 @@
   },
   "peerDependencies": {
     "dva": "^1.0.0"
+  },
+  "nyc": {
+    "require": [
+      "babel-register"
+    ],
+    "sourceMap": false,
+    "instrument": false
   }
 }
