--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "rimraf lib && babel src --out-dir lib",
-    "test": "mocha test/*.spec.js --compilers js:babel-core/register",
+    "test": "cross-env NODE_ENV=test nyc mocha test/*.spec.js",
     "report": "cross-env NODE_ENV=test nyc --reporter=html mocha test/*.spec.js",
     "coverage": "nyc report --reporter=text-lcov | coveralls"
   },
